lab-4/src/test-pod-mutaded.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-mutated
  namespace: target-ns
spec:
  serviceAccountName: test-sa
  containers:
  - name: alpine
    image: alpine/curl:latest
    command: ["sleep", "3600"]
