lab-4/src/validating-policy.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: no-hostpath-validating
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: ['']
        apiVersions: [v1]
        operations: [CREATE, UPDATE]
        resources: [pods]
  validations:
    - message: "HostPath volumes are forbidden in test-policy"
      expression: >
        (object.metadata.namespace != 'test-policy') ||
        (!has(object.spec.volumes) || object.spec.volumes.all(v, !has(v.hostPath)))
